Add CSS property

--- a/style.css
+++ b/style.css
@@ -3,3 +3,56 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  display:flex;
+  justify-content: center;
+}
+nav{
+  display: flex;
+  justify-content: center;
+}
+nav > a{
+  margin: 3px;
+  background-color: rgb(189, 189, 189);
+  padding: 0px 10px 0px 10px;
+}
+#featured-property{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+figcaption {
+  display: flex;
+  justify-content: center;
+  
+}
+section > p{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 800px;
+  text-align: center;
+/* justify-self: center; */
+  /* margin-left: 25%; */
+  /* margin-right: 25%; */
+}
+#details{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: red;
+  /* margin-left: 10%; */
+  /* margin-right: 10%; */
+  padding-left: 10%;
+  padding-right: 10%;
+}
+#details > div{
+  float: left;
+  width: 25%;
+  /* background-color: red; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* align-self: center; */
+  /* margin-left: 25px; */
+  /* margin-right: 25px; */
+}
