--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav > a{
 figcaption {
   display: flex;
   justify-content: center;
-  
+  font-size: 15px;
 }
 section > p{
   display: flex;
@@ -32,27 +32,16 @@ section > p{
   justify-content: center;
   width: 800px;
   text-align: center;
-/* justify-self: center; */
-  /* margin-left: 25%; */
-  /* margin-right: 25%; */
 }
 #details{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   background-color: red;
-  /* margin-left: 10%; */
-  /* margin-right: 10%; */
   padding-left: 10%;
   padding-right: 10%;
 }
 #details > div{
   float: left;
   width: 25%;
-  /* background-color: red; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* align-self: center; */
-  /* margin-left: 25px; */
-  /* margin-right: 25px; */
 }
